--- a/EvalPro/EvalPro.Web/EvalPro.Web.csproj
+++ b/EvalPro/EvalPro.Web/EvalPro.Web.csproj
@@ -11,4 +11,8 @@
         <PackageReference Include="Swashbuckle.AspNetCore" Version="6.6.2"/>
     </ItemGroup>
 
+    <ItemGroup>
+      <ProjectReference Include="..\EvalPro.Database\EvalPro.Database.csproj" />
+    </ItemGroup>
+
 </Project>
