--- a/EvalPro/EvalPro.Web/ClientApp/tsconfig.app.json
+++ b/EvalPro/EvalPro.Web/ClientApp/tsconfig.app.json
@@ -3,6 +3,13 @@
   "include": ["env.d.ts", "src/**/*", "src/**/*.vue"],
   "exclude": ["src/**/__tests__/*"],
   "compilerOptions": {
+
+  "moduleResolution": "node16",
+  "module": "node16",
+  "target": "esnext",
+  "esModuleInterop": true,
+  "skipLibCheck": true,
+
     "tsBuildInfoFile": "./node_modules/.tmp/tsconfig.app.tsbuildinfo",
 
     "paths": {
