--- a/EvalPro/EvalPro.Web/ClientApp/package.json
+++ b/EvalPro/EvalPro.Web/ClientApp/package.json
@@ -15,7 +15,7 @@
     "format": "prettier --write src/"
   },
   "dependencies": {
-    "@primeuix/themes": "^1.2.5",
+    "@primevue/themes": "^4.4.0",
     "primeflex": "^4.0.0",
     "primeicons": "^7.0.0",
     "primevue": "^4.3.9",
@@ -30,7 +30,7 @@
     "npm-run-all2": "^8.0.4",
     "prettier": "3.6.2",
     "typescript": "~5.8.0",
-    "vite": "^7.0.6",
+    "vite": "^7.1.9",
     "vite-plugin-vue-devtools": "^8.0.0",
     "vue-tsc": "^3.0.4"
   }
