--- a/EvalPro/EvalPro.Berechnungen/EvalPro.Berechnungen.csproj
+++ b/EvalPro/EvalPro.Berechnungen/EvalPro.Berechnungen.csproj
@@ -7,4 +7,8 @@
     <Nullable>disable</Nullable>
   </PropertyGroup>
 
+  <ItemGroup>
+    <ProjectReference Include="..\EvalPro.Database\EvalPro.Database.csproj" />
+  </ItemGroup>
+
 </Project>
