--- a/EvalPro/EvalPro.Web/ClientApp/package.json
+++ b/EvalPro/EvalPro.Web/ClientApp/package.json
@@ -15,11 +15,12 @@
     "format": "prettier --write src/"
   },
   "dependencies": {
+    "@primeuix/themes": "^1.2.5",
     "@primevue/themes": "^4.4.0",
     "primeflex": "^4.0.0",
     "primeicons": "^7.0.0",
-    "primevue": "^4.3.9",
-    "vue": "^3.5.18",
+    "primevue": "^4.4.0",
+    "vue": "^3.5.22",
     "vue-router": "^4.5.1"
   },
   "devDependencies": {
