Anpassung sodass einfach zwischen Debug- und Datenbankmodus umgeschalten werden kann

--- a/EvalPro/EvalPro.Berechnungen/EvalPro.Berechnungen.csproj
+++ b/EvalPro/EvalPro.Berechnungen/EvalPro.Berechnungen.csproj
@@ -9,6 +9,7 @@
 
   <ItemGroup>
     <ProjectReference Include="..\EvalPro.Database\EvalPro.Database.csproj" />
+    <ProjectReference Include="..\EvalPro.Debug\EvalPro.Debug.csproj" />
   </ItemGroup>
 
 </Project>
