--- a/EvalPro/EvalPro.Web/EvalPro.Web.csproj
+++ b/EvalPro/EvalPro.Web/EvalPro.Web.csproj
@@ -8,7 +8,9 @@
 
     <ItemGroup>
         <PackageReference Include="Microsoft.AspNetCore.OpenApi" Version="8.0.20"/>
+        <PackageReference Include="Serilog.Sinks.Console" Version="6.1.1" />
         <PackageReference Include="Swashbuckle.AspNetCore" Version="6.6.2"/>
+        <PackageReference Include="Swashbuckle.AspNetCore.SwaggerGen" Version="10.0.0" />
     </ItemGroup>
 
     <ItemGroup>
